[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/Game.gd" type="Script" id=1]
[ext_resource path="res://src/Moth.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Lantern.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Nectar.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/ARCADEPI.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://assets/nutrients.png" type="Texture" id=6]
[ext_resource path="res://assets/background-trees.png" type="Texture" id=8]
[ext_resource path="res://assets/background-sky.png" type="Texture" id=9]
[ext_resource path="res://assets/sfx/bat-bite.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/nutrients-unfilled.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 5 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Background Sky" type="Sprite" parent="."]
position = Vector2( 160, 90 )
texture = ExtResource( 9 )

[node name="Nectars" type="Node2D" parent="."]
position = Vector2( 31, 8 )

[node name="Nectar" parent="Nectars" instance=ExtResource( 4 )]
position = Vector2( -23, 65 )

[node name="Nectar2" parent="Nectars" instance=ExtResource( 4 )]
position = Vector2( 174, 133 )

[node name="Nectar3" parent="Nectars" instance=ExtResource( 4 )]
position = Vector2( 203, 82 )

[node name="Nectar4" parent="Nectars" instance=ExtResource( 4 )]
position = Vector2( 103, 53 )

[node name="Nectar5" parent="Nectars" instance=ExtResource( 4 )]
position = Vector2( 278, 62 )

[node name="Nectar6" parent="Nectars" instance=ExtResource( 4 )]
position = Vector2( 100, 147 )

[node name="Background Trees" type="Sprite" parent="."]
position = Vector2( 160, 90 )
texture = ExtResource( 8 )

[node name="BatSpawnStart" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="BatSpawnTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="MothModulateTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Moth" parent="." instance=ExtResource( 2 )]
position = Vector2( 118, 101 )

[node name="Lantern" parent="." instance=ExtResource( 3 )]
position = Vector2( 162, 126 )

[node name="UI" type="Control" parent="."]
margin_left = 3.0
margin_top = 147.0
margin_right = 43.0
margin_bottom = 187.0

[node name="NectarBar" type="TextureProgress" parent="UI"]
margin_right = 13.0
margin_bottom = 31.0
value = 50.0
texture_under = ExtResource( 11 )
texture_progress = ExtResource( 6 )
fill_mode = 3
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NectarCount" type="Label" parent="UI"]
margin_left = 16.0
margin_top = 14.0
margin_right = 48.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.87451, 0.443137, 0.14902, 1 )
text = "50"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bite" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = 10.0
pitch_scale = 4.0
[connection signal="timeout" from="BatSpawnStart" to="." method="_on_BatSpawnStart_timeout"]
[connection signal="timeout" from="BatSpawnTimer" to="." method="_on_BatSpawnTimer_timeout"]
[connection signal="timeout" from="MothModulateTimer" to="." method="_on_MothModulateTimer_timeout"]
[connection signal="area_entered" from="Moth" to="." method="_on_Moth_area_entered"]
[connection signal="area_entered" from="Lantern" to="." method="_on_Lantern_area_entered"]
[connection signal="area_exited" from="Lantern" to="." method="_on_Lantern_area_exited"]
